<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/_260sdp"
    android:layout_height="@dimen/_200sdp"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:background="@color/red"
        android:layout_gravity="center"
        android:layout_height="@dimen/_40sdp">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:gravity="center|left"
            android:layout_gravity="left|center"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/like_txt"
        android:textColor="@color/black"
        android:text="@string/ratevideo"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true" />

    <RatingBar
        android:id="@+id/dailog_rating"
        android:layout_gravity="center"
        style="@style/customRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/cancel_txt"
        android:background="@color/white"
        android:textSize="15sp"
        android:layout_gravity="right"
        android:gravity="right"
        android:padding="@dimen/_6sdp"
        android:textStyle="normal|italic"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/like_txt"
        android:layout_toEndOf="@+id/like_txt" />

    <TextView
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/ok_txt"
        android:padding="@dimen/_6sdp"
        android:textSize="15sp"
        android:gravity="right"
        android:background="@color/white"
        android:layout_gravity="right"
        android:textStyle="normal|italic"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btn_cancel"
        android:layout_toStartOf="@+id/btn_cancel"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp" />
</RelativeLayout>