<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:orientation="vertical">


        <!--  <RelativeLayout
              android:id="@+id/action_bar_bg"
              android:layout_width="match_parent"
              android:layout_height="56dp"
              android:layout_alignParentTop="true"
              android:background="@color/transparent_black_seventy"
              android:orientation="horizontal">


              <ImageView
                  android:id="@+id/backBtn"
                  android:layout_width="30dp"
                  android:layout_height="25dp"
                  android:layout_alignParentLeft="true"
                  android:layout_centerInParent="true"
                  android:layout_marginLeft="10dp"
                  android:padding="2dp"
                  android:src="@mipmap/back_arrow"
                  android:visibility="visible" />


              <ImageView
                  android:id="@+id/logo_img"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:layout_marginLeft="50dp"
                  android:src="@drawable/toolbar_icon"
                  android:visibility="visible" />

              <TextView
                  android:id="@+id/signUp_btn"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentRight="true"
                  android:layout_centerInParent="true"
                  android:layout_margin="5dp"
                  android:layout_marginBottom="30dp"
                  android:text="@string/login_txt"
                  android:textAlignment="center"
                  android:textColor="#FFF"
                  android:textSize="@dimen/text_size_medium"
                  android:textStyle="bold" />
          </RelativeLayout>
  -->

        <LinearLayout
            android:id="@+id/ll_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/action_bar_bg"
            android:background="@null"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp">


            <LinearLayout
                android:id="@+id/content_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:orientation="vertical">


                <com.multitv.yuv.ui.CustomTextView
                    android:id="@+id/connectTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/signUp_btn"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="normal" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_username1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.multitv.yuv.ui.CustomEditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                        android:hint="@string/first_name"
                        android:maxLines="1"
                        android:textColor="#FFF"
                        android:singleLine="true"
                        android:textColorHint="@color/white_bg"
                        android:textSize="@dimen/text_size_small" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lastName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.multitv.yuv.ui.CustomEditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_gravity="center"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                        android:hint="@string/last_name"
                        android:textColor="#FFF"
                        android:singleLine="true"
                        android:textColorHint="@color/white_bg"
                        android:textSize="@dimen/text_size_small" />

                </android.support.design.widget.TextInputLayout>




                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_email_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.multitv.yuv.ui.CustomEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/email_txt"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#FFF"
                        android:textColorHint="@color/white_bg"
                        android:textSize="@dimen/text_size_small" />
                </android.support.design.widget.TextInputLayout>





                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mobile_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.multitv.yuv.ui.CustomEditText
                        android:id="@+id/mobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/mobile_txt"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textColor="#FFF"
                        android:digits="1234567890"
                        android:textColorHint="@color/white_bg"
                        android:textSize="@dimen/text_size_small" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#FFF"
                    app:passwordToggleEnabled = "true"
                    app:passwordToggleTint="#FFF"
                    app:passwordToggleDrawable="@drawable/ic_eye"
                    android:layout_marginTop="5dp">

                    <com.multitv.yuv.ui.CustomEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_gravity="center"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                        android:hint="@string/password_txt"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="#FFF"
                        android:textColorHint="@color/white_bg"
                        android:textSize="@dimen/text_size_small" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_phone_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#FFF"
                    app:passwordToggleEnabled = "true"
                    app:passwordToggleTint="#FFF"
                    app:passwordToggleDrawable="@drawable/ic_eye"
                    android:layout_marginTop="5dp">

                    <com.multitv.yuv.ui.CustomEditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColor="#FFF"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@color/white_bg"
                        android:textSize="@dimen/text_size_small" />
                </android.support.design.widget.TextInputLayout>


                <com.multitv.yuv.ui.CustomButton
                    android:id="@+id/signInBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/rounded_btn_bg"
                    android:onClick="goToHomeActivityFromSignUp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="60dp"

                    android:paddingRight="60dp"
                    android:paddingTop="10dp"
                    android:text="SIGN UP"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#FFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />





                <com.multitv.yuv.ui.CustomTextView
                    android:id="@+id/textViewAlreadyRegistered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:gravity="center"
                    android:text="@string/already_registered"
                    android:textAllCaps="true"
                    android:textColor="#b7b7b7"
                    android:textSize="14dp" />








            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>

