<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- NOTIFICATION STATUS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_setting_notification"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/fragment_setting_imageView_notification"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/toggle_off"/>
        </LinearLayout>

        <!-- DIVIDER -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#222222"/>

        <!-- SELECT LANGUAGE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/activity_setting_select_language"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <com.multitv.yuv.customview.DropDownTextView
                android:id="@+id/fragment_setting_textView_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="#EEEEEE"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="MKR"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- DIVIDER -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#222222"/>


        <!-- MATURE FILTER STATUS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_setting_mature_filter"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/fragment_setting_imageView_mature_filter"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/toggle_off"/>
        </LinearLayout>

        <!-- DIVIDER -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#222222"
            android:visibility="gone"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_setting_layout_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:theme="@style/AppTheme.RedAccent"/>
    </RelativeLayout>
</RelativeLayout>